2004-12-31  Dalibor Topic  <robilad@kaffe.org>

	* test/internal/Makefile.am (NativeMethodCall.class): Merged 
	with java/lang/System.class.
	(java/lang/System.class): Removed.

2004-12-31  Dalibor Topic  <robilad@kaffe.org>

	* test/internal/Makefile.am (NativeMethodCall.class): Added 
	dependency on java/lang/System.class.
	(java/lang/System.class): Written out source file name.

2004-12-31  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am.in (LD_LIBRARY_PATH): Added to
	fix bootstrap problems on OpenBSD.

	Reported by:  Riccardo Mottola <rmottola@users.sf.net>
	Suggested by:  Guilhem Lavaux  <guilhem@kaffe.org>

	* libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in:
	Regenerated.
	
2004-12-30  Guilhem Lavaux  <guilhem@kaffe.org>

	* include/Makefile.am
	(NOINSTALL_DERIVED_HDRS): Added java_lang_VMClassLoader.h.

	* configure.ac: Removed the detection of broken setsockopt.

	* kaffe/kaffevm/jni/jni-string.c
	(KaffeJNI_NewStringUTF): If data is NULL we should return NULL
	directly.

	* kaffe/kaffevm/systems/unix-pthreads/syscalls.c
	(jthreadedAccept): Use the old implementation using select all the
	time. It looks like being the only really working way of handling
	timeouts.

	* libraries/clib/native/ClassLoader.c: Include
	java_lang_VMClassLoader.h to fix some warnings.
	
	* configure, include/Makefile.in, config/config.h.in,
	libltdl/ltdl.c: Regenerated.

2004-12-30  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-jthreads/jsignal.h,
	kaffe/kaffevm/systems/unix-jthreads/signal.c:
	Brought back ignoreSignal as a global symbol but renamed it to
	KaffeJThread_ignoreSignal.

2004-12-29  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/gtypes.h: New intp type for signed integer that may
	represent pointers.

	* kaffe/kaffevm/thread.c
	(nameThread): Check that the thread has been linked before returning
	the name.

	* kaffe/kaffevm/kaffe-gc/gc-mem.c