@@ -8,4 +8,6 @@ libclasspath_la_SOURCES = jcl.c jcl.h \
 			  jnilink.c jnilink.h \
 			  native_state.c native_state.h
 
-libclasspath_la_LDFLAGS = @CLASSPATH_MODULE@
+libclasspath_la_LDFLAGS = \
+	$(KLIBFLAGS) \
+        -release $(PACKAGE_VERSION)
