@@ -1,3 +1,15 @@
+2005-01-01  Guilhem Lavaux  <guilhem@kaffe.org>
+
+	First bug fix of the year ! :)
+
+	* kaffe/kaffevm/external.c: Adapted error handling to darwin's and
+	openbsd's messages.
+
+	* libraries/clib/classpath/Makefile.am: Added useful link flags
+	for libclasspath.
+
+	* libraries/clib/classpath/Makefile.in: Regenerated.
+	
 2004-12-31  Dalibor Topic  <robilad@kaffe.org>
 
 	* test/internal/Makefile.am (NativeMethodCall.class): Merged 
